# garden

./: .gitmodules  README.md
Garden/: Basics.v  Garden.v  Makefile  _CoqProject  blacklist.txt  coq-garden.opam  link_brevis_chips.py
Garden/01/: Keccak.v
Garden/Brevis/: M.v  lib.rs
Garden/Brevis/chips/: mod.rs  trace.rs  utils.rs
Garden/Brevis/compiler/: mod.rs  program.rs  word.rs  word.v
Garden/Brevis/configs/: config.rs  mod.rs
Garden/Brevis/emulator/: emulator.rs  mod.rs  opts.rs  record.rs  stdin.rs
Garden/Brevis/instances/: mod.rs
Garden/Brevis/iter/: mod.rs
Garden/Brevis/machine/: chip.rs  estimator.rs  extension.rs  field.rs  folder.rs  keys.rs  logger.rs  lookup.rs  lookup.v  machine.rs  mod.rs  permutation.rs  proof.rs  prover.rs  report.rs  utils.rs  verifier.rs  witness.rs
Garden/Brevis/primitives/: consts.rs  consts.v  mod.rs
Garden/Brevis/proverchain/: combine.rs  compress.rs  convert.rs  deferred.rs  embed.rs  mod.rs  riscv.rs
Garden/Brevis/thread/: channel.rs  mod.rs
Garden/Circom/Example/: aliascheck.v  babyjub.v  binsub.v  binsum.v  bitify.v  comparators.v  compconstant.v  eddsa.v  eddsamimc.v  eddsaposeidon.v  escalarmul.v  escalarmulany.v  escalarmulfix.v  escalarmulw4table.v  (+15 more)
Garden/LLZK/: M.v  README.md  mastermind.v  translated.v  verification.v
Garden/ModuloArith/: MArith.v
Garden/OpenVM/: integration_api.rs
Garden/Plonky3/: AddProofs.v  Blake3.v  M.v  MExpr.v  MField.v  MField2.v  MLessEffects.v  MOld.v  Util.v  UtilCompleteness.v  UtilLessEffects.v  UtilOld.v  utils.v
Garden/keccak-demo/: keccak.scm  tests.scm
(+576 files in other folders)
